--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ before_script:
 
 test:
   timeout: 1 hours
-  allow_failure: true
+  allow_failure: false
   stage: test
   script:
     - npm run test-html
