--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rastreio-api-test",
+  "name": "mantis-api-test",
   "version": "1.0.0",
   "description": "",
   "scripts": {
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "chai": "^4.3.4",
+    "joi": "^17.5.0",
     "lint": "^0.7.0",
     "mocha": "^8.4.0",
     "mocha-junit-reporter": "^2.0.0",
